Managers ID : Introduced variable to declare Managers ID in resource.robot and updated all the scripts in openbmc-test-automation
Changes:
    - Introduced ${MANAGER_ID} variable in resource.robot
    - Replaced all the Managers/bmc to Managers/${MANAGER_ID} across all the scripts
    - Also in data/variables.py updated chassis id for the few redfish uri.

Tested:
     - Ran All The Scripts Successfully

Change-Id: Iff3673aae27657e0799dec5cb94c1651a0cd5d18
Signed-off-by: ganesanb <ganesanb@ami.com>

--- a/ffdc/ffdc_config.yaml
+++ b/ffdc/ffdc_config.yaml
@@ -140,7 +140,7 @@ OPENBMC:
             - redfishtool -u ${username} -p ${password} -r ${hostname} -S Always
               raw GET /redfish/v1/AccountService/Accounts
             - redfishtool -u ${username} -p ${password} -r ${hostname} -S Always
-              raw GET /redfish/v1/Managers/bmc/LogServices/Dump/Entries
+              raw GET /redfish/v1/Managers/${manager_id}/LogServices/Dump/Entries
             - redfishtool -u ${username} -p ${password} -r ${hostname} -S Always
               raw GET /redfish/v1/Systems/system/LogServices/Dump/Entries
             - redfishtool -u ${username} -p ${password} -r ${hostname} -S Always
@@ -151,6 +151,7 @@ OPENBMC:
                         - ${hostname}
                         - ${username}
                         - ${password}
+                        - ${manager_id}
                         - /redfish/v1/
                         - json
         FILES:
