--- a/ffdc/ffdc_config.yaml
+++ b/ffdc/ffdc_config.yaml
@@ -140,7 +140,7 @@ OPENBMC:
             - redfishtool -u ${username} -p ${password} -r ${hostname} -S Always
               raw GET /redfish/v1/AccountService/Accounts
             - redfishtool -u ${username} -p ${password} -r ${hostname} -S Always
-              raw GET /redfish/v1/Managers/bmc/LogServices/Dump/Entries
+              raw GET /redfish/v1/Managers/${MANAGER_ID}/LogServices/Dump/Entries
             - redfishtool -u ${username} -p ${password} -r ${hostname} -S Always
               raw GET /redfish/v1/Systems/system/LogServices/Dump/Entries
             - redfishtool -u ${username} -p ${password} -r ${hostname} -S Always
