Add support to log collecter CLI options for ports
Changes:
    - Added CLI option for SSH port
    - Fix HTTPs port for redfishtool

Tested:
   Tested on sanndbox script.

Change-Id: I96e864f923a5e38552af063981decc1d26b7863f
Signed-off-by: George Keishing <gkeishin@in.ibm.com>

--- a/ffdc/ffdc_config.yaml
+++ b/ffdc/ffdc_config.yaml
@@ -152,7 +152,7 @@ OPENBMC:
             - plugin:
                   - plugin_name: plugin.redfish.enumerate_request
                   - plugin_args:
-                        - ${hostname}
+                        - ${hostname}:${port_https}
                         - ${username}
                         - ${password}
                         - /redfish/v1/
