Update tox.ini default parameters
The default password is now set to empty.
User are expected to pass the password when
running the test.

Changes:
   - Removed OPENBMC_PASSWORD from tox.ini
   - Update python to python3

Tested:
   - Ran from the sandbox with the changes

Change-Id: I1f14b8c725957700dcd42a892c462888306c0a91
Signed-off-by: George Keishing <gkeishin@in.ibm.com>

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,6 @@ skipsdist = True
 passenv = *
 setenv =
     ARG_FILE={envtmpdir}/argument_file.txt
-    OPENBMC_PASSWORD=0penBmc
     OPENBMC_USERNAME=root
     SYSLOG_IP_ADDRESS=127.0.0.1
     SYSLOG_PORT=514
@@ -25,7 +24,7 @@ deps = {[testenv]deps}
 setenv = {[testenv]setenv}
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
 
 
 [testenv:palmetto]
@@ -34,7 +33,7 @@ setenv   = {[testenv]setenv}
     OPENBMC_MODEL=./data/Palmetto.py
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
 
 
 [testenv:qemu]
@@ -43,7 +42,7 @@ setenv   = {[testenv]setenv}
     OPENBMC_MODEL=./data/Palmetto.py
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
 
 
 [testenv:witherspoon]
@@ -52,7 +51,7 @@ setenv   = {[testenv]setenv}
     OPENBMC_MODEL=./data/Witherspoon.py
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
 
 [testenv:romulus]
 deps     = {[testenv]deps}
@@ -60,4 +59,4 @@ setenv   = {[testenv]setenv}
     OPENBMC_MODEL=./data/Romulus.py
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
