--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps = {[testenv]deps}
 setenv = {[testenv]setenv}
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
 
 
 [testenv:palmetto]
@@ -34,7 +34,7 @@ setenv   = {[testenv]setenv}
     OPENBMC_MODEL=./data/Palmetto.py
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
 
 
 [testenv:qemu]
@@ -43,7 +43,7 @@ setenv   = {[testenv]setenv}
     OPENBMC_MODEL=./data/Palmetto.py
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
 
 
 [testenv:witherspoon]
@@ -52,7 +52,7 @@ setenv   = {[testenv]setenv}
     OPENBMC_MODEL=./data/Witherspoon.py
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
 
 [testenv:romulus]
 deps     = {[testenv]deps}
@@ -60,4 +60,4 @@ setenv   = {[testenv]setenv}
     OPENBMC_MODEL=./data/Romulus.py
 commands =
     {[testenv]commands}
-    python -m robot.run --argumentfile {env:ARG_FILE} {posargs}
+    python3 -m robot.run --argumentfile {env:ARG_FILE} {posargs}
