FFDC replace eval with importlib code
Changes:
    - Remove eval functions
    - Add importlib code to replace eval
    - Update plugin documentation and YAML
    - Tweak code to handle new changes

Tested:
    - Ran with the changes from sandbox.
    - Tested YAML with different plugin examples
    - Tested bad path YAML
Change-Id: Iea0d4b879c1afc4fd25ab3a3c3ccb0e0875f86bc
Signed-off-by: George Keishing <gkeishin@in.ibm.com>

--- a/ffdc/ffdc_config.yaml
+++ b/ffdc/ffdc_config.yaml
@@ -147,7 +147,8 @@ OPENBMC:
               ${hostname}:${port_https} -S Always raw GET
               /redfish/v1/Systems/system/LogServices/EventLog/Entries
             - plugin:
-                  - plugin_name: plugin.redfish.enumerate_request
+                  - plugin_name: plugins.redfish
+                  - plugin_function: enumerate_request
                   - plugin_args:
                         - ${hostname}:${port_https}
                         - ${username}
