FFDC replace eval with importlib code
Changes:
    - Remove eval functions
    - Add importlib code to replace eval
    - Update plugin documentation and YAML
    - Tweak code to handle new changes

Tested:
    - Ran with the changes from sandbox.
    - Tested YAML with different plugin examples
    - Tested bad path YAML
Change-Id: Iea0d4b879c1afc4fd25ab3a3c3ccb0e0875f86bc
Signed-off-by: George Keishing <gkeishin@in.ibm.com>

--- a/ffdc/templates/log_collector_config_template.yaml
+++ b/ffdc/templates/log_collector_config_template.yaml
@@ -34,7 +34,8 @@ MY_BLOCK:
     SHELL_LOGS:
         COMMANDS:
             - plugin:
-                  - plugin_name: plugin.ssh_execution.ssh_execute_cmd
+                  - plugin_name: plugins.ssh_execution
+                  - plugin_function: ssh_execute_cmd
                   - plugin_args:
                         - ${hostname}
                         - ${username}
